<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/home"
            android:title="@string/dashboard"
            app:itemTextAppearance="@style/AppTheme.NavigationViewTextStyle"/>
        <item
            android:id="@+id/nav_ingresos"
            android:icon="@drawable/ingresos"
            android:title="@string/ingresos"/>
        <item
            android:id="@+id/nav_reporte"
            android:icon="@drawable/reporte"
            android:title="@string/reporte" />
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/perfil"
            android:title="@string/perfil" />

    </group>
</menu>