<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="16dp"
    android:paddingHorizontal="16dp">

    <TextView
        android:id="@+id/titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TxtVerdeMedianoItalic"
        android:text="@string/modificar_ingreso"
        android:gravity="center"
        />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editTextCantidad"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:hint="@string/cantidad"
        android:inputType="numberDecimal"
        android:padding="4dp"
        style="@style/EstiloEditText"
        android:background="@drawable/bg_btn_borde_amarillo"
        android:layout_margin="8dp"/>

    <EditText
        android:id="@+id/editTextFecha"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:hint="@string/fecha"
        android:focusable="false"
        android:clickable="true"
        android:padding="4dp"
        style="@style/EstiloEditText"
        android:background="@drawable/bg_btn_borde_amarillo"
        android:layout_margin="8dp"/>

    <Button
        android:id="@+id/btnEliminarIngreso"
        style="@style/EstiloBordeVerde"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="8dp"
        android:text="@string/eiminar_ingreso"
        android:textSize="20sp"/>

</LinearLayout>