<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:background="@drawable/mf_bg_card">

        <TextView
            android:id="@+id/mfTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/ingresos_cas"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/negro"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/editTextCantidad"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/mf_bg_input"
            android:padding="12dp"
            android:hint="@string/cantidad"
            android:inputType="numberDecimal"
            app:layout_constraintTop_toBottomOf="@id/mfTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/editTextFecha"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/mf_bg_input"
            android:padding="12dp"
            android:hint="@string/fecha"
            app:layout_constraintTop_toBottomOf="@id/editTextCantidad"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/editTextDescripcion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/mf_bg_input"
            android:padding="12dp"
            android:hint="@string/descripcion"
            app:layout_constraintTop_toBottomOf="@id/editTextFecha"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>