<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/mf_bg_header"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:contentDescription="@string/nav_header_desc"
        android:background="@drawable/mf_bg_card"
        android:padding="8dp"
        app:srcCompat="@mipmap/ic_launcher_foreground"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/NombreUsuario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/nombres_apellidos"
        android:textColor="@color/blanco"
        android:textStyle="bold"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="@id/imageView"
        app:layout_constraintStart_toEndOf="@id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="12dp"/>

    <TextView
        android:id="@+id/Usuario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/usuario"
        android:textColor="@color/texto2"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/NombreUsuario"
        app:layout_constraintStart_toStartOf="@id/NombreUsuario"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>