<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/amarillo_claro">

    <!-- Header moderno -->
    <View
        android:id="@+id/mfHeader"
        android:layout_width="0dp"
        android:layout_height="180dp"
        android:background="@drawable/mf_bg_header"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Tarjeta central -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mfCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/mf_bg_card"
        android:padding="18dp"
        app:layout_constraintTop_toTopOf="@id/mfHeader"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.35">

        <FrameLayout
            android:id="@+id/circulo"
            android:layout_width="88dp"
            android:layout_height="88dp"
            android:background="@drawable/mf_bg_card"
            android:padding="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/desc_logo"
                android:scaleType="fitCenter"
                android:src="@drawable/coin"/>
        </FrameLayout>

        <TextView
            android:id="@+id/txt_inicio"
            style="@style/TxtNegroGrande"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:gravity="center"
            android:text="@string/app_name"
            app:layout_constraintTop_toBottomOf="@id/circulo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/btnLogin"
            style="@style/EstiloBtnVerde"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/login"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/txt_inicio"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>